# Self-KVM

./: .gitignore  Cargo.toml  README.md
.claude/: launch.json
crates/kvm-core/: Cargo.toml
crates/kvm-core/src/: client.rs  config.rs  events.rs  file_transfer.rs  layout.rs  lib.rs  server.rs
crates/kvm-daemon/: Cargo.toml
crates/kvm-daemon/src/: client.rs  clipboard.rs  e2e.rs  file_transfer.rs  hooks.rs  lib.rs  main.rs  server.rs
crates/kvm-input/: Cargo.toml
crates/kvm-input/src/: clipboard.rs  enigo_backend.rs  inject.rs  lib.rs  rdev_backend.rs
crates/kvm-net/: Cargo.toml
crates/kvm-net/src/: lib.rs  tls.rs  transport.rs
crates/kvm-proto/: Cargo.toml
crates/kvm-proto/src/: codec.rs  error.rs  keys.rs  lib.rs  message.rs
examples/: mac-ubuntu.json
packaging/: README.md  build-linux-app.sh  install-linux-client.sh  install-macos-server.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate.mjs
src-tauri/src/: lib.rs  main.rs
tasks/: lessons.md  todo.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: main.ts  styles.css
