[package]
name = "self-kvm-app"
version = "0.1.0"
edition = "2021"
description = "Self-KVM — share one keyboard and mouse across machines"
authors = ["Self-KVM"]
license = "MIT"

# Standalone workspace so the GUI's heavy Tauri/wry deps stay out of the core
# workspace's `cargo test`.
[workspace]

[lib]
name = "self_kvm_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

kvm-core = { path = "../crates/kvm-core" }
kvm-daemon = { path = "../crates/kvm-daemon", features = ["real-input", "tls", "clipboard"] }
kvm-input = { path = "../crates/kvm-input", features = ["backends"] }

[profile.release]
lto = "thin"
strip = true
