[package]
name = "kvm-input"
description = "Self-KVM platform input: capture/injection traits, a mock backend, and (behind the `backends` feature) rdev capture + enigo injection."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kvm-core.workspace = true
kvm-proto.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Real OS backends are opt-in: they pull in platform crates and need
# Accessibility / Input Monitoring permissions, so the testable core never
# depends on them.
enigo = { version = "0.5", optional = true }
# RustDesk's rdev fork fixes macOS event-tap crashes (notably calling the
# keyboard-layout/TIS APIs off the main thread, which aborts on macOS 14+/26).
rdev = { git = "https://github.com/rustdesk-org/rdev", optional = true }
arboard = { version = "3", optional = true }
display-info = { version = "0.5", optional = true }

# macOS only: recenter the cursor while grabbing so it never sits clamped on a
# screen edge (which would zero out relative-motion deltas). Always-on for the
# macOS target (cheap) to avoid feature/target interaction; only *used* under
# the `backends` capture path.
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[features]
default = []
backends = ["dep:enigo", "dep:rdev", "dep:arboard", "dep:display-info"]
