[package]
name = "kvm-net"
description = "Async length-framed transport for Self-KVM protocol messages over tokio."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kvm-proto.workspace = true
thiserror.workspace = true
tokio.workspace = true

# TLS with trust-on-first-use fingerprints (ring backend → portable build).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"], optional = true }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"], optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = []
tls = ["dep:rustls", "dep:tokio-rustls", "dep:rcgen", "dep:sha2"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
